# cpp20-http-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp20_http.cpp  cpp20_http.hpp  cpp20_internet_client.cpp  cpp20_internet_client.hpp  sources
.github/workflows/: build_and_test.yaml
cmake/: Cpp20HttpClientConfig.cmake.in  GccClang.cmake  Msvc.cmake
examples/: CMakeLists.txt  async_get_request.cpp  async_simple.cpp  async_sockets.cpp  get_request.cpp  get_request_simple.cpp  post_request.cpp  socket.cpp  sockets.cpp
include/: cpp20_http_client.hpp  cpp20_internet_client.hpp
source/: cpp20_http_client.cpp  cpp20_internet_client.cpp  cpp20_internet_client.hpp
tests/: CMakeLists.txt  chunky_body_parser.cpp  concatenate_byte_data.cpp  extract_filename.cpp  http_response_parser.cpp  http_response_parser_callbacks.cpp  parse_headers_string.cpp  parse_status_line.cpp  select_on_type.cpp  split_url.cpp  testing_header.hpp  uri_encode.cpp
